Fixed 4761 (create department alignment in box)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -311,7 +311,7 @@ md-tabs {
         flex-direction: column;
     }
 
-    .create-txt {
+    .create-txt, .create-department {
         .displayFlex();
         justify-content: center;
         padding-bottom: 12px;
